--- a/configs/hardware/laptop.yaml
+++ b/configs/hardware/laptop.yaml
@@ -1,5 +1,5 @@
-batch_size: 8            # Very small for 4GB VRAM
+batch_size: 8           
 num_workers: 2
-accelerator: "gpu"       # Or "auto"
+accelerator: "gpu"      
 devices: 1
 pin_memory: False
